Bug 321004 - Accounts settings arrow is not correctly positioned with !oxygen
Summary: Accounts settings arrow is not correctly positioned with !oxygen
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-10 17:18 UTC by Christophe Marin
Modified: 2013-06-10 17:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments
Dialog with kmail --style qtcurve (32.98 KB, image/png)
2013-06-10 17:18 UTC, Christophe Marin
Details
Dialog with kmail --style Plastique (33.72 KB, image/png)
2013-06-10 17:19 UTC, Christophe Marin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2013-06-10 17:18:24 UTC
Created attachment 80429 [details]
Dialog with kmail --style qtcurve

The issue is there since ages, I just never submitted it.

in KMail Settings / Accounts / Receiving, there's a dropdown menu with additional options.

The arrow is not at the correct place if you're not using the oxygen theme.
Comment 1 Christophe Marin 2013-06-10 17:19:05 UTC
Created attachment 80430 [details]
Dialog with kmail --style Plastique
Comment 2 Laurent Montel 2013-06-10 17:55:07 UTC
Git commit 14f786541ecf72c3926978e4edf2b8da471d2674 by Montel Laurent.
Committed on 10/06/2013 at 19:54.
Pushed by mlaurent into branch 'master'.

Fix Bug 321004 - Accounts settings arrow is not correctly positioned with !oxygen

We can't set button in middle because in other style than oxygen arrow is not correctly positioned

FIXED-IN: 4.11

M  +21   -21   kmail/configuredialog/configagentdelegate.cpp

http://commits.kde.org/kdepim/14f786541ecf72c3926978e4edf2b8da471d2674