Fix Bug 321004 - Accounts settings arrow is not correctly positioned with !oxygen

We can't set button in middle because in other style than oxygen arrow is not correctly positioned

FIXED-IN: 4.11
BUG: 321004